# ozene-image-generation

./: .env  .env.example  Dockerfile  deploy.sh  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/routes/: generate.py
app/core/: config.py
app/services/: fal_services.py
core/: config.py
schemas/: response.py
services/: fal_services.py
