[project]
name = "ozen-image"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "python-multipart==0.0.9",
    "fal-client==0.5.6",
    "httpx==0.27.2",
    "python-dotenv==1.0.1",
    "pydantic-settings==2.5.2",
    "aiofiles==24.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.uv]
package = false
